fixing issues on mobile display

--- a/style.css
+++ b/style.css
@@ -473,7 +473,7 @@ div.panel h2{
     .mobile{
       width:50%;
     }
-    #aboutphoto{
+    .covers{
       padding-top:25%;
     }
 
